--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 ---
-layout: home
+title: "Ian S Gilman"
+layout: single
 author_profile: true
+permalink: /
+excerpt: '<i><font hex_number="#CCCCCC>">Hello?</font><i><br /> <br /> <br /> <br /><br /> <br />'
+header:
+  #overlay_image: austinhpatton.github.io/Images/HomeHeader.jpg
+  caption: "Looking Glass Rock, Pisgah NF"
 ---
