--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ author_profile: true
 permalink: /
 excerpt: '<i><font hex_number="#CCCCCC>">Hello?</font><i><br /> <br /> <br /> <br /><br /> <br />'
 header:
-  #overlay_image: isgilman.github.io/assets/images/OR_coast.JPG
+  #overlay_image: "/assets/images/OR_coast.JPG"
   caption: "Looking Glass Rock, Pisgah NF"
 ---
