--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Ian S Gilman"
-layout: single
+layout: home
 author_profile: true
 permalink: /
 excerpt: '<i><font hex_number="#CCCCCC>">Hello?</font><i><br /> <br /> <br /> <br /><br /> <br />'
