--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 title: "Ian S Gilman"
 layout: home
 author_profile: true
-permalink: /
-excerpt: '<i><font hex_number="#CCCCCC>">Hello?</font><i><br /> <br /> <br /> <br /><br /> <br />'
 header:
-  #overlay_image: "isgilman.github.io/assets/images/OR_coast.JPG"
-  caption: "Looking Glass Rock, Pisgah NF"
+  #overlay_image: isgilman.github.io/assets/images/OR_coast.JPG
+  caption: "Foo bar"
 ---
