--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ title: "Ian S Gilman"
 layout: home
 author_profile: true
 header:
-  overlay_image: isgilman.github.io/assets/images/OR_coast.JPG
+  overlay_image: "/assets/images/OR_coast.JPG"
   caption: "Foo bar"
 ---
