--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ layout: home
 author_profile: true
 header:
   overlay_image: "/assets/images/OR_coast.JPG"
-  caption: "Foo bar"
+  #caption: ""
 ---
