--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ author_profile: true
 header:
   overlay_image: "/assets/images/OR_coast.JPG"
   #caption: ""
+toc: true
 ---
-
 I am an evolutionary biologist and botanist in the [Edward's Lab](http://edwardslab.org) at Yale University. I'm interested in the evolution of CAM photosynthesis and its different forms.
