--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 #title: "Ian S Gilman"
-layout: splash
+layout: home
 author_profile: true
 header:
   overlay_image: "/assets/images/OR_coast.JPG"
   #caption: ""
-toc: true
+#toc: true
 ---
 I am an evolutionary biologist and botanist in the [Edward's Lab](http://edwardslab.org) at Yale University. I'm interested in the evolution of CAM photosynthesis and its different forms.
