--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 #title: "Ian S Gilman"
-layout: splash
+layout: home
 author_profile: true
 header:
   overlay_image: "/assets/images/OR_coast.JPG"
